Working through second milestone of the project